refactoring part 2 : dirs-refactorized: common - finished, point>activepoint(excluding-InactivePointFilter); next-dir:excluded-classes + rest of the 'point' dir;