@@ -10,9 +10,10 @@ import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
-import org.springframework.web.reactive.function.client.WebClient;
+import org.springframework.web.client.RestClient;
 import pl.bartlomiej.apiservice.geocoding.Position;
-import reactor.core.publisher.Flux;
+
+import java.util.Objects;
 
 import static pl.bartlomiej.apiservice.common.config.RedisCacheConfig.ADDRESS_COORDS_CACHE_NAME;
 
@@ -23,39 +24,40 @@ public class HereGeocodeServiceImpl implements GeocodeService {
     private static final String LNG = "lng";
     private static final int FIRST_GEOCODE_SUGGESTION = 0;
     private static final Logger log = LoggerFactory.getLogger(HereGeocodeServiceImpl.class);
-    private final WebClient webClient;
+    private final RestClient restClient;
     private final String geocodeApiKey;
     private final String geocodeApiBaseUrl;
 
-    public HereGeocodeServiceImpl(@Qualifier("tooManyRetryWebClient") WebClient webClient,
+    public HereGeocodeServiceImpl(@Qualifier("defaultRestClient") RestClient restClient,
                                   @Value("${geocode-api.api-key}") String geocodeApiKey,
                                   @Value("${geocode-api.api-base-url}") String geocodeApiBaseUrl) {
-        this.webClient = webClient;
+        this.restClient = restClient;
         this.geocodeApiKey = geocodeApiKey;
         this.geocodeApiBaseUrl = geocodeApiBaseUrl;
     }
 
     @Cacheable(cacheNames = ADDRESS_COORDS_CACHE_NAME)
-    public Flux<Position> getAddressCoordinates(String address) {
-        return this.retrieveGeocodeFromApi(address)
-                .map(response -> this.extractPositionFromResponse(response, address))
-                .cache();
+    public Position getAddressCoordinates(String address) {
+        JsonNode response = this.retrieveGeocodeFromApi(address);
+        return this.createPositionFromResponse(response, address);
     }
 
+    // todo - use the Spring Retry instead of webClient retry mechanism
+    //  (I'm deleting now, the WebClient retry for tooManyReq... approach)
     @NonNull
-    private Flux<JsonNode> retrieveGeocodeFromApi(String address) {
-        if (address == null || address.trim().isEmpty()) {
+    private JsonNode retrieveGeocodeFromApi(String address) {
+        if (address == null || address.isBlank()) {
             log.error("Null address, skipping request sending.");
-            return Flux.just(this.createDefaultPositionNode());
+            return this.createDefaultPositionNode();
         }
-        return webClient
+        return Objects.requireNonNull(restClient
                 .get()
                 .uri(this.buildGeocodeApiUrl(address))
                 .retrieve()
-                .bodyToFlux(JsonNode.class);
+                .body(JsonNode.class), "Geocode dat from API is null.");
     }
 
-    private Position extractPositionFromResponse(JsonNode response, String address) {
+    private Position createPositionFromResponse(JsonNode response, String address) {
         try {
             JsonNode position = response.get("items").get(FIRST_GEOCODE_SUGGESTION).get("position");
             return new Position(position.get(LNG).asDouble(), position.get(LAT).asDouble());
